--- a/index.html
+++ b/index.html
@@ -32,5 +32,120 @@
       font-family: "Manrope", sans-serif;
     }
   </style>
-  <body></body>
+  <body>
+    <!--main section -->
+    <main class="max-w-screen-xl mx-auto px-5 md:px-16 lg:px-25 font-manrope">
+      <header class="pt-10 mb-20 flex flex-col md:flex-row lg:flex-row gap-20">
+        <div class="order md:order-1 order-2">
+          <h1 class="text-4xl lg:text-7xl font-extrabold text-[#1C1C1C]">
+            It's good <br />
+            tea time at The Tea House
+          </h1>
+          <p class="text-[18px] text-[#777777] text font-medium">
+            Tea and Botanical Solutions Supplier Give Optimum Satisfaction To
+            Your Taste Buds.
+          </p>
+          <button
+            class="bg-gradient-to-l from-red-600 to-[#FF8938] px-2 py-4 md:px-10 lg:py-4 rounded-xl font-bold text-white"
+          >
+            Explore More<i
+              class="fa-solid fa-arrow-right -rotate-45 text-xl"
+            ></i>
+          </button>
+        </div>
+
+        <div class="relative order md:order-2 order-1">
+          <div>
+            <img class="w-full" src="./images/banner.png" alt="" />
+          </div>
+
+          <!--IMG CARD-->
+
+          <div
+            class="absolute top-40 lg:top-70 lg:left-13 md:top-48 left-5 flex flex-row gap-3 px-2 py-2 lg:px-10 md:py-4 rounded-xl lg:py-4 bg-white text-xl items-center drop-shadow-lg"
+          >
+            <div>
+              <i class="fa-regular fa-star text-2xl text-amber-500"></i>
+            </div>
+            <div class="ml-4">
+              <h3 class="text-neutral-900 text-2xl font-extrabold">5.00</h3>
+              <p class="text-[#777777] text-base font-semibold">
+                Trust Pilot Ratings
+              </p>
+            </div>
+          </div>
+        </div>
+      </header>
+
+      <!--our fetures section start-->
+      <section>
+        <!--our fetures text-->
+        <div class="md:text-center mb-5">
+          <h2 class="font-extrabold text-4xl md:text-5xl m-auto">
+            Our Featured Products
+          </h2>
+          <p
+            class="lg:max-w-screen-lg m-auto mt-4 text-[18px] text-[#777777] text font-medium"
+          >
+            There are many variations of passages of Lorem Ipsum available, but
+            the majority have suffered alteration in some form, by injected
+            humour, or randomised words which don't look even slightly
+            believable.
+          </p>
+        </div>
+        <!--our fetures section card -->
+        <div class="grid lg:grid-cols-4 md:grid-cols-2 gap-6">
+          <div
+            class="bg-gradient-to-b from-[#F4F4F4] to-[#F4F4F400] rounded-xl p-8"
+          >
+            <img class="m-auto my-7" src="./images/tea-1.png" alt="" />
+            <h4 class="text-center text-xl font-extrabold text-[#1C1C1C]">
+              Milk Tea
+            </h4>
+            <p class="text-center text-[#777777] font-semibold">
+              Creamer could be replaced <br />by fresh milk
+            </p>
+          </div>
+
+          <div
+            class="bg-gradient-to-b from-[#F4F4F4] to-[#F4F4F400] rounded-xl p-8"
+          >
+            <img class="m-auto my-7" src="./images/tea-2.png" alt="" />
+            <h4 class="text-center text-xl font-extrabold text-[#1C1C1C]">
+              Black Tea
+            </h4>
+            <p class="text-center text-[#777777] font-semibold">
+              Creamer could be replaced <br />by fresh milk
+            </p>
+          </div>
+          <div
+            class="bg-gradient-to-b from-[#F4F4F4] to-[#F4F4F400] rounded-xl p-8"
+          >
+            <img class="m-auto my-7" src="./images/tea-3.png" alt="" />
+            <h4 class="text-center text-xl font-extrabold text-[#1C1C1C]">
+              Milk Tea
+            </h4>
+            <p class="text-center text-[#777777] font-semibold">
+              Creamer could be replaced <br />by fresh milk
+            </p>
+          </div>
+
+          <div
+            class="bg-gradient-to-b from-[#F4F4F4] to-[#F4F4F400] rounded-xl p-8"
+          >
+            <img class="m-auto my-7" src="./images/tea-4.png" alt="" />
+            <h4 class="text-center text-xl font-extrabold text-[#1C1C1C]">
+              Green Tea
+            </h4>
+            <p class="text-center text-[#777777] font-semibold">
+              Creamer could be replaced <br />by fresh milk
+            </p>
+          </div>
+        </div>
+      </section>
+
+      <section></section>
+      <br /><br />
+    </main>
+  </body>
 </html>
