meet our super client complet

--- a/index.html
+++ b/index.html
@@ -143,8 +143,150 @@
           </div>
         </div>
       </section>
+      <!--great tea section start-->
+      <section class="grid md:grid-cols-2 lg:grid-cols-2 gap-10 md:gap-12">
+        <!--great tea grid section steart-->
+        <div class="grid grid-cols-2 gap-7">
+          <div
+            class="md:h-[136px] h-24 bg-gradient-to-r form-0% from-[#FF000010] to-100% to-[#FF893890] rounded-xl col-span-1"
+          ></div>
 
-      <section></section>
+          <div class="row-span-2">
+            <img
+              class="bg-[#E6A62310] m-auto md:px-8 pt-14 pb-8 rounded-xl"
+              src="./images/fresh-1.png"
+              alt=""
+            />
+          </div>
+          <div class="row-span-2">
+            <img
+              class="bg-[#57763910] m-auto md:pt-10 pt-7 pb-8 md:px-12 rounded-xl"
+              src="./images/fresh-2.png"
+              alt=""
+            />
+          </div>
+          <div
+            class="md:h-[136px] h-24 bg-gradient-to-r form-0% from-[#D9D9D9] to-100% to-[#FFFFFF] rounded-xl col-span-1"
+          ></div>
+        </div>
+        <!--great tea text section-->
+        <div>
+          <h2 class="md:text-5xl font-extrabold text-4xl text-[#1C1C1C]">
+            Great Tea, Freshly Presented
+          </h2>
+          <br />
+          <p class="text-[#777777] font-semibold">
+            The meaning of gong cha is chanese is to provide the best tea to
+            emperor from all possessions . It represents the highest quality and
+            self expectation. Establishing in 2006, Gong cha had been deeply
+            appreciated by its custoers because of good words of mouth and
+            unique customized service orginated from Taiwan.
+          </p>
+          <br />
+          <br />
+
+          <h4 class="font-extrabold text-xl text-[#1C1C1C]">Unique Taste</h4>
+          <p class="text-[#777777] font-semibold">
+            A Unique and different style from other teapots gives a luxurious
+            and minimalist impression
+          </p>
+          <br />
+          <h4 class="font-extrabold text-xl text-[#1C1C1C]">Premium Quality</h4>
+          <p class="text-[#777777] font-semibold text-base">
+            Premium Quality that makes tea more elegant and more durable when
+            you use it.
+          </p>
+        </div>
+      </section>
+
+      <!-- meet our super client-->
+      <section
+        class="md:py-20 py-6 pl-3 md:px-16 bg-gradient-to-r from-0% from-[#FF8938] to-100% to-[#FF0000] rounded-xl grid grid-cols-1 gap-9 md:grid-cols-2 mt-10 mb-32 md:mt-23"
+      >
+        <div>
+          <h1 class="md:text-5xl font-extrabold text-4xl text-[#F4F4F4] mb-5">
+            Meet Our Super Clients
+          </h1>
+          <p class="text-[#F4F4F4] font-semibold text-base mb-8">
+            There are many variations of passages of Lorem Ipsum available, but
+            the majority have suffered alteration in some form, by injected
+            humour, or randomised words which don't look even slightly
+            believable.
+          </p>
+          <button class="px-7 py-4 bg-white rounded-lg">
+            <span
+              class="bg-gradient-to-r from-[#FF0000] to-[#FF8938] bg-clip-text text-transparent font-bold"
+              >Show All</span
+            >
+          </button>
+        </div>
+        <div class="pr-3 relative">
+          <!--middle card-->
+          <div class="absolute top-40 z-10">
+            <div
+              class="rounded-lg md-h-[233px] mb-14 bg-white py-10 px-12 md:w-3/4"
+            >
+              <div
+                class="absolute left-24 -top-8 md:-left-7 md:-top-5 bg-white rounded-full"
+              >
+                <img class="p-1" src="./images/client.png" alt="" />
+              </div>
+              <div>
+                <p class="text-[#777777] text-base">
+                  We are providing the best and suitable home insurance services
+                  for the people who are interested to treatment
+                </p>
+                <br />
+                <h4 class="font-bold text-base text-[#1C1C1C]">Ilham Yuda</h4>
+                <div class="flex flex-row justify-between">
+                  <h5 class="text-base text-[#5D5A6F] font-medium">
+                    Businessman
+                  </h5>
+                  <img src="./images/circles.png" alt="" />
+                </div>
+              </div>
+            </div>
+          </div>
+          <!--top card-->
+          <div
+            class="rounded-lg md-h-[233px] relative left-8 md:left-32 mb-14 bg-white py-10 px-12 opacity-40 md:w-3/4"
+          >
+            <div
+              class="absolute left-24 -top-8 md:-left-7 md:-top-5 bg-white rounded-full"
+            >
+              <img class="p-1" src="./images/client.png" alt="" />
+            </div>
+            <div>
+              <p class="text-[#777777] text-base">
+                We are providing the best and suitable home insurance services
+                for the people who are interested to treatment
+              </p>
+              <br />
+              <h4 class="font-bold text-base text-[#1C1C1C]">Ilham Yuda</h4>
+              <h5 class="text-base text-[#5D5A6F] font-medium">Businessman</h5>
+            </div>
+          </div>
+          <!--middle card-->
+          <div
+            class="rounded-lg md-h-[233px] relative left-8 md:left-32 bg-white py-10 px-12 opacity-40 md:w-3/4"
+          >
+            <div
+              class="absolute left-24 -top-8 md:-left-7 md:-top-5 bg-white rounded-full"
+            >
+              <img class="p-1" src="./images/client.png" alt="" />
+            </div>
+            <div>
+              <p class="text-[#777777] text-base">
+                We are providing the best and suitable home insurance services
+                for the people who are interested to treatment
+              </p>
+              <br />
+              <h4 class="font-bold text-base text-[#1C1C1C]">Ilham Yuda</h4>
+              <h5 class="text-base text-[#5D5A6F] font-medium">Designer</h5>
+            </div>
+          </div>
+        </div>
+      </section>
       <br /><br />
     </main>
   </body>
