--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
         </div>
       </section>
       <!--great tea section start-->
-      <section class="grid md:grid-cols-2 lg:grid-cols-2 gap-10 md:gap-12">
+      <section class="grid grid-cols-1 lg:grid-cols-2 gap-10 md:gap-12">
         <!--great tea grid section steart-->
         <div class="grid grid-cols-2 gap-7">
           <div
@@ -153,14 +153,14 @@
 
           <div class="row-span-2">
             <img
-              class="bg-[#E6A62310] m-auto md:px-8 pt-14 pb-8 rounded-xl"
+              class="bg-[#E6A62310] m-auto md:px-17 pt-14 pb-8 rounded-xl lg:py-22"
               src="./images/fresh-1.png"
               alt=""
             />
           </div>
           <div class="row-span-2">
             <img
-              class="bg-[#57763910] m-auto md:pt-10 pt-7 pb-8 md:px-12 rounded-xl"
+              class="bg-[#57763910] m-auto md:pt-10 pt-7 lg:py-20 pb-8 md:px-19 rounded-xl"
               src="./images/fresh-2.png"
               alt=""
             />
@@ -201,7 +201,7 @@
 
       <!-- meet our super client-->
       <section
-        class="md:py-20 py-6 pl-3 md:px-16 bg-gradient-to-r from-0% from-[#FF8938] to-100% to-[#FF0000] rounded-xl grid grid-cols-1 gap-9 md:grid-cols-2 mt-10 mb-32 md:mt-23"
+        class="md:py-20 py-6 pl-3 md:px-16 bg-gradient-to-r from-0% from-[#FF8938] to-100% to-[#FF0000] rounded-xl grid grid-cols-1 gap-9 lg:grid-cols-2 mt-10 mb-16 md:mb-32 md:mt-23"
       >
         <div>
           <h1 class="md:text-5xl font-extrabold text-4xl text-[#F4F4F4] mb-5">
@@ -287,7 +287,183 @@
           </div>
         </div>
       </section>
+
+      <!--News & Events section-->
+      <section>
+        <!--News & Events header section -->
+
+        <div class="m-auto md:mb-12 mb-10">
+          <h2
+            class="font-extrabold text-4xl md:text-5xl lg:text-5xl text-center"
+          >
+            News & Events
+          </h2>
+          <br />
+          <p
+            class="text-[#777777] text-base font-medium max-w-screen-md m-auto text-left md:text-center"
+          >
+            There are many variations of passages of Lorem Ipsum available, but
+            the majority have suffered alteration in some form, by injected
+            humour, or randomised words which don't look even slightly
+            believable.
+          </p>
+        </div>
+
+        <!--News & Events  card section-->
+        <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
+          <div class="border border-gray-200 rounded-xl p-5">
+            <img src="./images/news-1.png" alt="" />
+            <p class="text-[#777777] text-base font-medium">Feb 05, 2027</p>
+            <h5 class="font-extrabold text-[#1C1C1C] text-xl">
+              Collecting 8 points for discount
+            </h5>
+            <p class="text-[#777777] text-base font-medium">
+              There are many variations of passages of Lorem Ipsum available.
+            </p>
+            <button class="text-base font-bold text-[#1C1C1C]">
+              Learn More
+            </button>
+          </div>
+          <div class="border border-gray-200 rounded-xl p-5">
+            <img src="./images/news-2.png" alt="" />
+            <p class="text-[#777777] text-base font-medium">Feb 05, 2027</p>
+            <h5 class="font-extrabold text-[#1C1C1C] text-xl">
+              Collecting 8 points for discount
+            </h5>
+            <p class="text-[#777777] text-base font-medium">
+              There are many variations of passages of Lorem Ipsum available.
+            </p>
+            <button class="text-base font-bold text-[#1C1C1C]">
+              Learn More
+            </button>
+          </div>
+          <div class="border border-gray-200 rounded-xl p-5">
+            <img src="./images/news-3.png" alt="" />
+            <p class="text-[#777777] text-base font-medium">Feb 05, 2027</p>
+            <h5 class="font-extrabold text-[#1C1C1C] text-xl">
+              Collecting 8 points for discount
+            </h5>
+            <p class="text-[#777777] text-base font-medium">
+              There are many variations of passages of Lorem Ipsum available.
+            </p>
+            <button class="text-base font-bold text-[#1C1C1C]">
+              Learn More
+            </button>
+          </div>
+        </div>
+      </section>
       <br /><br />
     </main>
+
+    <footer
+      class="bg-gradient-to-r form-0% from-[#FF000010] to-100% to-[#FF893890]"
+    >
+      <div class="md:max-w-screen-lg m-auto p-5 md:px-25 md:pt-20">
+        <div class="flex justify-between mb-20">
+          <img src="./images/cup.png" alt="" />
+          <div class="md:flex md:items-center gap-10">
+            <h5 class="text-xl font-medium text-[#494949]">
+              Ready to get strated?
+            </h5>
+            <button
+              class="px-6 py-4 bg-gradient-to-r from-0% from-[#FF0000] to-100% to-[#FF8938] rounded-lg mt-4 md:mt-0"
+            >
+              Get Started
+            </button>
+          </div>
+        </div>
+
+        <div class="grid grid-cols-2 lg:grid-cols-4 md:gap-40">
+          <div class="grid grid-cols-1 gap-4">
+            <h3 class="text-xl font-semibold text-[#1C1C1C]">Quick Links</h3>
+            <br />
+            <ul>
+              <li class="text-[#494949] text-base hover:text-red-300">Home</li>
+            </ul>
+            <ul>
+              <li class="text-[#494949] text-base hover:text-red-300">
+                About Us
+              </li>
+            </ul>
+            <ul>
+              <li class="text-[#494949] text-base hover:text-red-300">
+                Insurance
+              </li>
+            </ul>
+            <ul>
+              <li class="text-[#494949] text-base hover:text-red-300">
+                Privacy Policy
+              </li>
+            </ul>
+          </div>
+
+          <div class="grid grid-cols-1 gap-4">
+            <h3 class="text-xl font-semibold text-[#1C1C1C]">Our Service</h3>
+            <br />
+            <ul>
+              <li class="text-[#494949] text-base hover:text-red-300">
+                Life Insurance
+              </li>
+            </ul>
+            <ul>
+              <li class="text-[#494949] text-base hover:text-red-300">
+                Car Insurance
+              </li>
+            </ul>
+            <ul>
+              <li class="text-[#494949] text-base hover:text-red-300">
+                Health Insurance
+              </li>
+            </ul>
+            <ul>
+              <li class="text-[#494949] text-base hover:text-red-300">
+                Privacy Policy
+              </li>
+            </ul>
+          </div>
+
+          <div class="mt-16 md:mt-0">
+            <h3 class="text-xl font-semibold text-[#1C1C1C]">Help</h3>
+            <br />
+            <br />
+            <ul>
+              <li class="text-[#494949] text-base hover:text-red-300">FAQs</li>
+            </ul>
+            <br />
+            <ul>
+              <li class="text-[#494949] text-base hover:text-red-300">
+                Contact Us
+              </li>
+            </ul>
+          </div>
+          <div class="flex flex-col gap-10 mt-16 md:mt-0">
+            <h3 class="text-6 font-semibold text-[#1C1C1C]">
+              Subscribe to our <br />
+              newsletter
+            </h3>
+            <div>
+              <input
+                placeholder="Email address"
+                type="email"
+                class="bg-transparent border-b-2 border-black w-4/6 text-[#494949]"
+              />
+              <i
+                class="fa-solid fa-chevron-right text-white bg-orange-600 h-8 w-8 content-center text-center rounded-full"
+              ></i>
+            </div>
+            <div class="flex gap-6">
+              <i class="fa-brands fa-facebook"></i>
+              <i class="fa-brands fa-twitter"></i>
+              <i class="fa-brands fa-instagram"></i>
+            </div>
+          </div>
+        </div>
+        <div class="mt-20 text-center">
+          <p class="font-semibold text-base text-[#494949]">
+            ©shahidul 2025 UIDesign.to - All rights reserved.
+          </p>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
