--- a/index.html
+++ b/index.html
@@ -441,7 +441,7 @@
               Subscribe to our <br />
               newsletter
             </h3>
-            <div>
+            <div class="flex flex-row gap-4">
               <input
                 placeholder="Email address"
                 type="email"
