--- a/index.html
+++ b/index.html
@@ -448,7 +448,7 @@
                 class="bg-transparent border-b-2 border-black w-4/6 text-[#494949]"
               />
               <i
-                class="fa-solid fa-chevron-right text-white bg-orange-600 h-8 w-8 content-center text-center rounded-full"
+                class="fa-solid fa-chevron-right text-white bg-orange-600 h-8 w-8 content-center text-center rounded-full inline-flex"
               ></i>
             </div>
             <div class="flex gap-6">
