--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             Your Taste Buds.
           </p>
           <button
-            class="bg-gradient-to-l from-red-600 to-[#FF8938] px-2 py-4 md:px-10 lg:py-4 rounded-xl font-bold text-white"
+            class="bg-gradient-to-l from-red-600 to-[#FF8938] px-2 py-4 md:px-10 lg:py-4 rounded-xl font-bold text-white cursor-pointer"
           >
             Explore More<i
               class="fa-solid fa-arrow-right -rotate-45 text-xl"
@@ -213,7 +213,7 @@
             humour, or randomised words which don't look even slightly
             believable.
           </p>
-          <button class="px-7 py-4 bg-white rounded-lg">
+          <button class="px-7 py-4 bg-white rounded-lg cursor-pointer">
             <span
               class="bg-gradient-to-r from-[#FF0000] to-[#FF8938] bg-clip-text text-transparent font-bold"
               >Show All</span
@@ -320,7 +320,7 @@
             <p class="text-[#777777] text-base font-medium">
               There are many variations of passages of Lorem Ipsum available.
             </p>
-            <button class="text-base font-bold text-[#1C1C1C]">
+            <button class="text-base font-bold text-[#1C1C1C] cursor-pointer">
               Learn More
             </button>
           </div>
@@ -333,7 +333,7 @@
             <p class="text-[#777777] text-base font-medium">
               There are many variations of passages of Lorem Ipsum available.
             </p>
-            <button class="text-base font-bold text-[#1C1C1C]">
+            <button class="text-base font-bold text-[#1C1C1C] cursor-pointer">
               Learn More
             </button>
           </div>
@@ -346,7 +346,7 @@
             <p class="text-[#777777] text-base font-medium">
               There are many variations of passages of Lorem Ipsum available.
             </p>
-            <button class="text-base font-bold text-[#1C1C1C]">
+            <button class="text-base font-bold text-[#1C1C1C] cursor-pointer">
               Learn More
             </button>
           </div>
@@ -366,14 +366,14 @@
               Ready to get strated?
             </h5>
             <button
-              class="px-6 py-4 bg-gradient-to-r from-0% from-[#FF0000] to-100% to-[#FF8938] rounded-lg mt-4 md:mt-0"
+              class="px-6 py-4 bg-gradient-to-r from-0% from-[#FF0000] to-100% to-[#FF8938] rounded-lg mt-4 md:mt-0 cursor-pointer"
             >
               Get Started
             </button>
           </div>
         </div>
 
-        <div class="grid grid-cols-2 lg:grid-cols-4 md:gap-40">
+        <div class="grid grid-cols-2 lg:grid-cols-4 md:gap-18">
           <div class="grid grid-cols-1 gap-4">
             <h3 class="text-xl font-semibold text-[#1C1C1C]">Quick Links</h3>
             <br />
@@ -441,20 +441,22 @@
               Subscribe to our <br />
               newsletter
             </h3>
-            <div class="flex flex-row gap-4">
+            <div class="flex flex-row gap-5">
               <input
                 placeholder="Email address"
                 type="email"
                 class="bg-transparent border-b-2 border-black w-4/6 text-[#494949]"
               />
-              <i
-                class="fa-solid fa-chevron-right text-white bg-orange-600 h-8 w-8 content-center text-center rounded-full "
-              ></i>
+              <div
+                class="text-white bg-orange-600 h-9 w-9 content-center text-center rounded-full cursor-pointer"
+              >
+                <i class="fa-solid fa-chevron-right"></i>
+              </div>
             </div>
             <div class="flex gap-6">
-              <i class="fa-brands fa-facebook"></i>
-              <i class="fa-brands fa-twitter"></i>
-              <i class="fa-brands fa-instagram"></i>
+              <i class="fa-brands fa-facebook cursor-pointer"></i>
+              <i class="fa-brands fa-twitter cursor-pointer"></i>
+              <i class="fa-brands fa-instagram cursor-pointer"></i>
             </div>
           </div>
         </div>
