--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
               clifford: "#da373d",
             },
           },
+          fontFamily: {
+            manrope: ["Manrope", "sans - serif"],
+          },
         },
       };
     </script>
@@ -32,9 +35,9 @@
       font-family: "Manrope", sans-serif;
     }
   </style>
-  <body>
+  <body class="font-manrope">
     <!--main section -->
-    <main class="max-w-screen-xl mx-auto px-5 md:px-16 lg:px-25 font-manrope">
+    <main class="max-w-screen-xl mx-auto px-5 md:px-16 lg:px-25">
       <header class="pt-10 mb-20 flex flex-col md:flex-row lg:flex-row gap-20">
         <div class="order md:order-1 order-2">
           <h1 class="text-4xl lg:text-7xl font-extrabold text-[#1C1C1C]">
@@ -146,29 +149,25 @@
       <!--great tea section start-->
       <section class="grid grid-cols-1 lg:grid-cols-2 gap-10 md:gap-12">
         <!--great tea grid section steart-->
-        <div class="grid grid-cols-2 gap-7">
-          <div
+        <ul class="grid grid-cols-2 gap-7">
+          <li
             class="md:h-[136px] h-24 bg-gradient-to-r form-0% from-[#FF000010] to-100% to-[#FF893890] rounded-xl col-span-1"
-          ></div>
+          ></li>
 
-          <div class="row-span-2">
-            <img
-              class="bg-[#E6A62310] m-auto md:px-17 pt-14 pb-8 rounded-xl lg:py-22"
-              src="./images/fresh-1.png"
-              alt=""
-            />
-          </div>
-          <div class="row-span-2">
-            <img
-              class="bg-[#57763910] m-auto md:pt-10 pt-7 lg:py-20 pb-8 md:px-19 rounded-xl"
-              src="./images/fresh-2.png"
-              alt=""
-            />
-          </div>
-          <div
-            class="md:h-[136px] h-24 bg-gradient-to-r form-0% from-[#D9D9D9] to-100% to-[#FFFFFF] rounded-xl col-span-1"
-          ></div>
-        </div>
+          <li
+            class="col-span-1 row-span-2 bg-[#E6A62310] rounded-xl flex justify-center items-center p-5"
+          >
+            <img src="./images/fresh-1.png" alt="" />
+          </li>
+          <li
+            class="col-span-1 row-span-2 bg-[#57763910] rounded-xl flex justify-center items-center p-5"
+          >
+            <img src="./images/fresh-2.png" alt="" />
+          </li>
+          <li
+            class="col-span-1 md:h-[136px] h-24 bg-gradient-to-r form-0% from-[#D9D9D9] to-100% to-[#FFFFFF] rounded-xl"
+          ></li>
+        </ul>
         <!--great tea text section-->
         <div>
           <h2 class="md:text-5xl font-extrabold text-4xl text-[#1C1C1C]">
@@ -358,7 +357,7 @@
     <footer
       class="bg-gradient-to-r form-0% from-[#FF000010] to-100% to-[#FF893890]"
     >
-      <div class="md:max-w-screen-lg m-auto p-5 md:px-25 md:pt-20">
+      <div class="md:max-w-screen-lg m-auto py-8 px-5 md:px-0">
         <div class="flex justify-between mb-20">
           <img src="./images/cup.png" alt="" />
           <div class="md:flex md:items-center gap-10">
@@ -373,75 +372,60 @@
           </div>
         </div>
 
-        <div class="grid grid-cols-2 lg:grid-cols-4 md:gap-18">
-          <div class="grid grid-cols-1 gap-4">
+        <div class="grid grid-cols-2 lg:grid-cols-4">
+          <div>
             <h3 class="text-xl font-semibold text-[#1C1C1C]">Quick Links</h3>
-            <br />
-            <ul>
+
+            <ul class="pt-6 grid gap-y-2">
               <li class="text-[#494949] text-base hover:text-red-300">Home</li>
-            </ul>
-            <ul>
               <li class="text-[#494949] text-base hover:text-red-300">
                 About Us
               </li>
-            </ul>
-            <ul>
               <li class="text-[#494949] text-base hover:text-red-300">
                 Insurance
               </li>
-            </ul>
-            <ul>
               <li class="text-[#494949] text-base hover:text-red-300">
                 Privacy Policy
               </li>
             </ul>
           </div>
 
-          <div class="grid grid-cols-1 gap-4">
+          <div>
             <h3 class="text-xl font-semibold text-[#1C1C1C]">Our Service</h3>
-            <br />
-            <ul>
+
+            <ul class="pt-6 grid gap-y-2">
               <li class="text-[#494949] text-base hover:text-red-300">
                 Life Insurance
               </li>
-            </ul>
-            <ul>
               <li class="text-[#494949] text-base hover:text-red-300">
                 Car Insurance
               </li>
-            </ul>
-            <ul>
               <li class="text-[#494949] text-base hover:text-red-300">
                 Health Insurance
               </li>
-            </ul>
-            <ul>
               <li class="text-[#494949] text-base hover:text-red-300">
                 Privacy Policy
               </li>
             </ul>
           </div>
 
-          <div class="mt-16 md:mt-0">
+          <div>
             <h3 class="text-xl font-semibold text-[#1C1C1C]">Help</h3>
-            <br />
-            <br />
-            <ul>
+
+            <ul class="pt-6 grid gap-y-2">
               <li class="text-[#494949] text-base hover:text-red-300">FAQs</li>
-            </ul>
-            <br />
-            <ul>
               <li class="text-[#494949] text-base hover:text-red-300">
                 Contact Us
               </li>
             </ul>
           </div>
-          <div class="flex flex-col gap-10 mt-16 md:mt-0">
+
+          <div>
             <h3 class="text-6 font-semibold text-[#1C1C1C]">
               Subscribe to our <br />
               newsletter
             </h3>
-            <div class="flex flex-row gap-5">
+            <div class="flex flex-row gap-5 pt-6">
               <input
                 placeholder="Email address"
                 type="email"
@@ -453,7 +437,8 @@
                 <i class="fa-solid fa-chevron-right"></i>
               </div>
             </div>
-            <div class="flex gap-6">
+
+            <div class="flex gap-6 pt-6">
               <i class="fa-brands fa-facebook cursor-pointer"></i>
               <i class="fa-brands fa-twitter cursor-pointer"></i>
               <i class="fa-brands fa-instagram cursor-pointer"></i>
